# ecologits-api

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  RELEASE.md  main.py  pyproject.toml
.github/workflows/: deploy.yml  publish-docker.yml  pytest.yaml
app/: main.py
app/api/v1/: router.py
app/api/v1/responses/: __init__.py  estimations.py  models.py
app/api/v1beta/: router.py
app/api/v1beta/responses/: __init__.py  electricity_mix.py  providers.py
app/core/: config.py  description.md
tests/v1/: test_router.py
tests/v1beta/: test_router.py
