[project]
name = "ecologits-api"
version = "0.0.1"
description = "Api to use ecologits solution"
requires-python = ">=3.10,<4"
dependencies = [
    "fastapi[standard]>=0.128.4,<1.0.0",
    "ecologits>=0.10.0,<1.0.0",
    "pydantic-settings>=2.12.0",
    "ruff>=0.15.6",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "httpx>=0.28.1",
]
